# ParadoxicalUI

./: CMakeLists.txt  Event.hpp  EventType.hpp  IUI.hpp  OnEventListener.hpp  main.cpp
GUI/: GUI.hpp
UI/: UI.hpp  View.hpp
app/: CallbackTests.hpp
