cmake_minimum_required(VERSION 3.5.1)
project(ParadoxicalUI)	 
set(CMAKE_CXX_EXTENSIONS OFF)
set(CXX_STANDARD 11)
find_package(Threads REQUIRED)
find_package(crossguid CONFIG REQUIRED)

add_executable(ParadoxicalUI main.cpp)
target_compile_features(ParadoxicalUI PRIVATE cxx_std_11)
target_include_directories(ParadoxicalUI PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(ParadoxicalUI ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ParadoxicalUI /usr/local/lib/libcrossguid.dylib)
